--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,13 @@
 PORT=8081
 FRONT_URL=http://localhost:5173
-CLOUDID=yuan-0825
-CLOUDPW=xe04C3u8^oVQ:^bx
+# CLOUDID=yuan-0825
+# CLOUDPW=xe04C3u8^oVQ:^bx
+# PORT=8081
+HOST=localhost
+SQL_USER=root
+SQL_PASSWORD=yuan0825
+SQL_DATABASE=twitter
+BACK_ACCOUNT=123
+BACK_PASSWORD=123
+TOKEN_SECRET=123
+BACK_TOKEN_SECRET=123
